--- a/index.html
+++ b/index.html
@@ -20,19 +20,16 @@
     
 
     <div class="section">
-      <h2>Research Experience</h2>
-      <p><strong>Cornell University (2020–2025)</strong></p>
+      <h2>Research Projects</h2>
+      <p><strong>Differentiable packing simulation for 3D irrregular packing</strong></p>
       <ul>
-        <li>Automated e-commerce packing with IMA logistics: Differentiable SDF packing, underactuated reorientation, next-best-view</li>
-        <li>Autonomous medical cart (Jetson, ODROID, Realsense) with ROS stack and PID navigation</li>
-        <li>DeBERTA finetuning for essay scoring; BERT/VAE for HRI motion generation</li>
-        <li>GAN-based monocular ice hockey trajectory tracking</li>
-        <li>Transformer-based DRL for Traveling Salesman Problem with neighborhoods</li>
+        <li>Rapid growth of e-commerce sector in logistics domain requires advanced packing algorithm that considers irregular object shapes</li>
+        <li>However, existing methods (heuristics, RL) focus on accelerated collision checking between objects based on discrete shape representation</li>
+        <li>Fundamental challenges for e-commerce packing involves dynamic stability, object orientaiton in continuous space, and underexplored combinatorial search on object packing sequence</li>
+        <li>We addressed this challenges to convert packing problem into contiuous optimization using neural SDF, differentiable process, and topological graph search</li>
       </ul>
-      <p><strong>University of Michigan (2016–2018)</strong></p>
-      <ul>
-        <li>Force estimation via pose optimization, car trajectory MPC planning</li>
-      </ul>
+
+
     </div>
 
 
