--- a/index.html
+++ b/index.html
@@ -28,8 +28,18 @@
         <li>Fundamental challenges for e-commerce packing involves dynamic stability, object orientaiton in continuous space, and underexplored combinatorial search on object packing sequence</li>
         <li>We addressed this challenges to convert packing problem into contiuous optimization using neural SDF, differentiable process, and topological graph search</li>
       </ul>
+    </div>
 
 
+    <div class="section">
+      <h2>Research Projects</h2>
+      <p><strong>Uncertainty aware next-best-view planning for cluttered scene reconstruction with manipulability</strong></p>
+      <ul>
+        <li>Active reconstruction is necessary for embodied AI in real world environment with unseen and cluttered objects.</li>
+        <li>However, manipulation often fails due to the uncertainty in object shapes coming from high occlusion, sensor noise, and symmetry in object 6D pose </li>
+        <li>We address this problem by reconstructing object 3D shapes in neural SDF with shape uncertainty </li>
+        <li>For efficient planning, we've generated next-best-view planner for active reconstruction with robot manipulator considering industrial applications</li>
+      </ul>
     </div>
 
 
