--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
       </ul>
     </div>
 
+    <div class="section">
+      <h2>Research Projects</h2>
+      <p><strong>Object reorientation with underactuated system with complementary free MPC</strong></p>
+      <ul>
+        <li>Active reconstruction is necessary for embodied AI in real world environment with unseen and cluttered objects.</li>
+        <li>However, manipulation often fails due to the uncertainty in object shapes coming from high occlusion, sensor noise, and symmetry in object 6D pose </li>
+        <li>We address this problem by reconstructing object 3D shapes in neural SDF with shape uncertainty </li>
+        <li>For efficient planning, we've generated next-best-view planner for active reconstruction with robot manipulator considering industrial applications</li>
+      </ul>
+    </div>
+
+
 
       <div class="section">
       <h2>Research Projects</h2>
