--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <li>However, existing methods (heuristics, RL) focus on accelerated collision checking between objects based on discrete shape representation</li>
         <li>Fundamental challenges for e-commerce packing involves dynamic stability, object orientaiton in continuous space, and underexplored combinatorial search on object packing sequence</li>
         <li>We addressed this challenges to convert packing problem into contiuous optimization using neural SDF, differentiable process, and topological graph search</li>
+        <li>We compared our methods with mixed-integer programming, heuristic methods, and RL-based policy and achieved the state-of-the-art</li>
+        <li>This work is collaboration with IMA, Italian logistics company</li>
       </ul>
     </div>
 
