--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li>Estimating player 3D trajectory is crucial for advanced sports analytics in career development, team strategy design, and injury analysis</li>
         <li>However, sensor installation and attachment to athelets affects their performance and inefficient for scalable data collection</li>
         <li>To address this limitation of data for machine learning, we've developed GAN-based image-to-image translation network for converting icerink to dense field of colorized points for camera estimation</li>
-        <li>For collected data of 1000 image samples of image frames and manually annotated camera pose, our method achieves 95% accuracy in terms of mIOU for partial and 92% of mIOUR for whole ice rink</li>
+        <li>For collected data of 1000 image samples of image frames and manually annotated camera pose, our method achieves 95% accuracy in terms of mIOU for partial and 92% of mIOU for whole ice rink</li>
       </ul>
     </div>
     
