--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
         <li>For collected data of 1000 image samples of image frames and manually annotated camera pose, our method achieves 95% accuracy in terms of mIOU for partial and 92% of mIOU for whole ice rink</li>
       </ul>
     </div>
+
+  <div class="section">
+
+      <p><strong>Autonomous medical crash cart for navigation in hospital environment</strong></p>
+      <ul>
+        <li>Autonomous medical crash cart is crucial for alleviating the burdens of medical nurses in hospital environment which is labor intensive, stressful, and emergencies</li>
+        <li>We converted a medical crash cart to autonomous by adding SW(YOLO,PID,ROS) and HW(Raspi, Intel Realsense D435, and ODROID with segway wheels) </li>
+        <li>We first desgined interaction diagram considering the basic functionalities of the crash cart following the nurse in indoor scenes </li>
+        <li>Our vision-based PID enabled to follow the target person within 1.4 meters and alleviating the burdens of carrying the heavy cart</li>
+      </ul>
+    </div>
+
+
     
     <div class="section">
 
