--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
       </ul>
     </div>
 
+    <div class="section">
 
+      <p><strong>Training deep generative models with RL for Traveling Salesman Problem with unit circle neighborhoods</strong></p>
+      <ul>
+        <li>Traveling Salesman Problem(TSP) is one of the most popular NP-hard problems which is hard to find the general solution within a polynomial time once problem size increases</li>
+        <li>In robotic applications, complex task planning is not only NP-hard, but contains continuous variables that complicates the problem to NP-complete</li>
+        <li>Therefore, we focused on the traveling salesman problem with unit circle neighborhood where points in TSP are now continuous regions of unit circles</li>
+        <li>To solve this underexplored problem, we developed hybrid methods by training graph attention-based pointer network for TSP, and heuristic local optimization using virtual force method</li>
+        <li>Our method outperforms current SOTA heuristic solvers and efficiently converge to the local minima once TSP path is determined.</li>
+      </ul>
+    </div>
 
     <div class="section">
       <h2>Media</h2>
