--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <h2>Research Projects</h2>
       <p><strong>Differentiable packing simulation for 3D irrregular packing</strong></p>
       <ul>
+        <li>Packing real world 3D objects in a minimum sized box is challenging due to non-differentiable collision checking, 3D rotation, and physical interactions</li>
         <li>Rapid growth of e-commerce sector in logistics domain requires advanced packing algorithm that considers irregular object shapes</li>
         <li>However, existing methods (heuristics, RL) focus on accelerated collision checking between objects based on discrete shape representation</li>
         <li>Fundamental challenges for e-commerce packing involves dynamic stability, object orientaiton in continuous space, and underexplored combinatorial search on object packing sequence</li>
